Release Notes - Mesos - Version 1.5.0 (WIP)
-------------------------------------------
This release contains the following new features:

Deprecations/Removals:

Additional API Changes:
  * [MESOS-7660] `Filter::refuse_seconds` is now capped to 31536000
    seconds (365 days).
  * [MESOS-7941] Built-in executors will now send a TASK_STARTING
    status update when a task is starting.
  * [MESOS-8165] Master will now send TASK_GONE status for unknown
    tasks of PARTITION_AWARE frameworks belonging to registered agents
    during explicit reconciliation.

Unresolved Critical Issues:

Feature Graduations:
* v1 Operator API is now considered stable.


All Experimental Features:


Release Notes - Mesos - Version 1.4.1
-------------------------------------------
* This is a bug fix release.

** Bug
 * [MESOS-7873] - Expose `ExecutorInfo.ContainerInfo.NetworkInfo` in Mesos `state` endpoint.
 * [MESOS-7921] - ProcessManager::resume sometimes crashes accessing EventQueue.
 * [MESOS-7964] - Heavy-duty GC makes the agent unresponsive.
 * [MESOS-7968] - Handle `/proc/self/ns/pid_for_children` when parsing available namespace.
 * [MESOS-7969] - Handle cgroups v2 hierarchy when parsing /proc/self/cgroups.
 * [MESOS-7980] - Stout fails to compile with libc >= 2.26.
 * [MESOS-8051] - Killing TASK_GROUP fail to kill some tasks.
 * [MESOS-8080] - The default executor does not propagate missing task exit status correctly.
 * [MESOS-8090] - Mesos 1.4.0 crashes with 1.3.x agent with oversubscription
 * [MESOS-8135] - Masters can lose track of tasks' executor IDs.
 * [MESOS-8169] - Incorrect master validation forces executor IDs to be globally unique.


Release Notes - Mesos - Version 1.4.0
-------------------------------------------
This release contains the following new features:

  * [MESOS-5116] - The `disk/xfs` isolator now supports the
    `--enforce_container_disk_quota` flag to efficiently measure disk
    usage without enforcing usage constraints.
