@@ -327,25 +327,25 @@ void Slave::initialize()
 
   Option<string> secretKey;
 #ifdef USE_SSL_SOCKET
-  if (flags.executor_secret_key.isSome()) {
-    Try<string> secretKey_ = os::read(flags.executor_secret_key.get());
+  if (flags.jwt_secret_key.isSome()) {
+    Try<string> secretKey_ = os::read(flags.jwt_secret_key.get());
 
     if (secretKey_.isError()) {
       EXIT(EXIT_FAILURE) << "Failed to read the file specified by "
-                         << "--executor_secret_key";
+                         << "--jwt_secret_key";
     }
 
     // TODO(greggomann): Factor the following code out into a common helper,
     // since we also do this when loading credentials.
     Try<os::Permissions> permissions =
-      os::permissions(flags.executor_secret_key.get());
+      os::permissions(flags.jwt_secret_key.get());
     if (permissions.isError()) {
-      LOG(WARNING) << "Failed to stat executor secret key file '"
-                   << flags.executor_secret_key.get()
+      LOG(WARNING) << "Failed to stat jwt secret key file '"
+                   << flags.jwt_secret_key.get()
                    << "': " << permissions.error();
     } else if (permissions.get().others.rwx) {
       LOG(WARNING) << "Permissions on executor secret key file '"
-                   << flags.executor_secret_key.get()
+                   << flags.jwt_secret_key.get()
                    << "' are too open; it is recommended that your"
                    << " key file is NOT accessible by others";
     }
@@ -355,8 +355,8 @@ void Slave::initialize()
   }
 
   if (flags.authenticate_http_executors) {
-    if (flags.executor_secret_key.isNone()) {
-      EXIT(EXIT_FAILURE) << "--executor_secret_key must be specified when "
+    if (flags.jwt_secret_key.isNone()) {
+      EXIT(EXIT_FAILURE) << "--jwt_secret_key must be specified when "
                          << "--authenticate_http_executors is set to true";
     }
 
