@@ -3,6 +3,8 @@ Release Notes - Mesos - Version 1.5.0 (WIP)
 This release contains the following new features:
 
 Deprecations/Removals:
+  * Agent flag `--executor_secret_key` has been deprecated. Operators
+    should use `--jwt_secret_key` instead.
 
 Additional API Changes:
   * [MESOS-7660] `Filter::refuse_seconds` is now capped to 31536000
